--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Eric Platon <zaraki@gmx.com>"]
 
 [dependencies]
-hyper = '0.9.9'
-flate2 = { version = '0.2', features = ['zlib'], default-features = false }
+hyper = "0.9.9"
+flate2 = { version = "0.2", features = ["zlib"], default-features = false }
+tar = "0.4.13"
